23.2, correct error in ms-modal.js (remove defining modal to parser); add modal to all workbook steps; shift modal 70% instead of 70 left

--- a/app/css/directives/ms-modal.css
+++ b/app/css/directives/ms-modal.css
@@ -1,4 +1,4 @@
 .modal, .modal.fade.in {
 	top:5%;
-    left: 75%; /* was 10% */
+    left: 70%; /* was 10% */
 }
